# acdh-django-zotero

./: .gitignore  README.rst  pyproject.toml
bib/: package-lock.json  package.json  urls.py  views.py  zot_utils.py
bib/static/bib/: import.js  tailwind.dist.css
bib/templates/bib/: dashboard.html  import.html
